--- a/public/css/style.css
+++ b/public/css/style.css
@@ -85,8 +85,14 @@ h4 em {
 }
 
 header {
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
   text-align: center;
+}
+
+@media screen and (max-width: 500px) {
+  header {
+    margin-bottom: 1rem;
+  }
 }
 
 .profession {
@@ -122,16 +128,17 @@ header {
 }
 
 .personal-profile {
-  margin-bottom: 2rem;
-}
-
-.personal-profile div:first-child {
-  border-bottom: 1px solid #2f2f2f;
-  padding-bottom: 1rem;
+  margin-bottom: 3rem;
 }
 
 .personal-profile p {
   margin-bottom: 1em;
+}
+
+@media screen and (max-width: 500px) {
+  .personal-profile {
+    margin-bottom: 1rem;
+  }
 }
 
 .experience {
@@ -183,9 +190,13 @@ header {
 }
 
 .portfolio-items {
-  border-top: 1px solid #2f2f2f;
-  margin-top: 2rem;
-  padding: 1rem 0 .5rem;
+  margin-bottom: 3rem;
+}
+
+@media screen and (max-width: 500px) {
+  .portfolio-items {
+    margin-bottom: 1rem;
+  }
 }
 
 .portfolio-item {
@@ -219,13 +230,20 @@ header {
 
 footer {
   border-top: 1px solid #2f2f2f;
-  padding: .5rem 0;
+  margin-top: 3rem;
+  padding: 1rem 0;
   text-align: center;
 }
 
 @media screen and (max-width: 992px) {
   footer {
     text-align: left;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  footer {
+    margin-top: 1rem;
   }
 }
 
